--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="hero-right">
       <div class="avatar-container">
-        <img src="image.png" alt="Subhadip Avatar" />
+        <img src="image.jpg" alt="Subhadip Avatar" />
       </div>
       <div class="address">
         <h2>Kulti-713343</h2>
