--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 </head>
 <body class="dark-theme">
 
-  <!-- Particle Background -->
   <div id="particles-js"></div>
 
-  <!-- Navbar -->
   <nav class="navbar">
     <div class="logo"><b>Subhadip Maji -<br> Turning Ideas into Code</b></div>
     <ul class="nav-links" id="navLinks">
@@ -29,7 +27,6 @@
     <button id="themeSwitch"><i class="fas fa-adjust"></i></button>
   </nav>
 
-  <!-- Hero Section -->
   <header class="hero-section" id="home">
     <div class="hero-left">
       <h2>Hi There,</h2>
@@ -52,8 +49,6 @@
       </div>
     </div>
   </header>
-
-  <!-- About Section -->
    
   <section class="section" id="about">
     <h2>About Me</h2>
@@ -69,7 +64,6 @@
     </div>
   </section>
 
-  <!-- Skills Section -->
   <section class="section" id="skills">
     <h2>Skills</h2>
     <div class="skill-grid">
@@ -110,7 +104,6 @@
   </div>
   </section>
 
-  <!-- Projects Section -->
   <section class="section" id="projects">
     <h2>Projects</h2>
     <div class="project">
@@ -135,18 +128,17 @@
      
     </div>
   </section>
-  <!-- Certificate Section
-  <section class="section" id="Certificates">
+  <!--
+  <section class="section" id="certificates">
     <h2>Certificates</h2>
-    <div class="Certificate">
+    <div class="certificate">
       <h3>XYZ -</h3>
       <a href="#" target="_blank">Certificate Link</a>
       
     </div>     
     </div>
-  </section> -->
+  </section> 
 
-  <!-- Contact Section (Horizontal Layout) 
   <section class="section contact-horizontal" id="contact">
     <h2>Contact Me</h2>
     <form class="contact-form">
@@ -155,14 +147,15 @@
       <input type="text" placeholder="Your Message" required />
       <button type="submit" class="btn">Send</button>
     </form>
-  </section>   -->
+  </section> 
+-->
 
-  <!-- Footer -->
+  
   <footer class="footer">
     <p>&copy; 2025 Subhadip Maji. All rights reserved.</p>
   </footer>
 
-  <!-- Scripts -->
+  
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
   <script src="script.js"></script>
